gcc/testsuite/g++.dg/modules/atom-preamble-4.C
// { dg-additional-options "-fmodules-ts" }
#define NAME(X) X;

export module NAME(bob)

// { dg-error "module name followed by '\\\('" "" { target *-*-* } .-2 }
// { dg-error "expected ';' before '\\\(' token" "" { target *-*-* } .-3 }
